test/test_suite/errors/lone_try.c3
module test;

fn void main()
{
	try a; // #error: try?
}

fn void hello()
{
	catch a; // #error: catch?
}
